// Copyright(c) 2017-2018 Zededa, Inc.
// All rights reserved.

syntax = "proto3";

package org.lfedge.eve.config;
option go_package  = "github.com/lf-edge/eve/api/go/config";
option java_package = "org.lfedge.eve.config";

import "evecommon/devmodelcommon.proto";

message UUIDandVersion {
  string uuid = 1;
  string version = 2;
}

// Device Operational Commands Semantic
// For rebooting device,  command=Reset, counter = counter+delta, desiredState = on
// For poweroff device,  command=Reset, counter = counter+delta, desiredState = off
// For backup at midnight, command=Backup, counter = counter+delta, desiredState=n/a, opsTime = mm/dd/yy:hh:ss
// Current implementation does support only single command outstanding for each type
// In future can be extended to have more scheduled events
//
message DeviceOpsCmd {
  uint32 counter = 2;
  bool desiredState = 3;
  // FIXME: change to timestamp, once we move to gogo proto
  string opsTime = 4;
}

// Timers and other per-device policy which relates to the interaction
// with zedcloud. Note that the timers are randomized on the device
// to avoid synchronization with other devices. Random range is between
// between .5 and 1.5 of these nominal values. If not set (i.e. zero),
// it means the default value of 60 seconds.
message ConfigItem {
  string key = 1;         // E.g., "configinterval"
  string value = 2;
  // deprecated = 3;
  // deprecated = 4;
  // deprecated = 5;
  // deprecated = 6;
  // deprecated = 7;
}


// Adapter bundles corresponding to a subset of what is in ZioBundle
// When used by a NetworkInstanceConfig the name is the logicallabel
// for the network adapter.
message Adapter {
  org.lfedge.eve.common.PhyIoType type = 1;
  string name = 2;	// Short hand name such as "com" from bundle
}
